--- a/View/NewCostumerView.xaml
+++ b/View/NewCostumerView.xaml
@@ -12,13 +12,18 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
+
         </Grid.RowDefinitions>
 
         <TextBlock Text="New Costumer's shopping data"
@@ -33,20 +38,12 @@
                    Grid.Column="0"
                    Grid.Row="1"/>
         <TextBlock/>
-        <TextBox x:Name="txtBxName"
-                 Grid.Row="1"
-                 Grid.Column="1"
-                 Foreground="#5DBEBE"
-                 Background="Transparent"
-                 BorderThickness="0.5"
-                 BorderBrush="#5DBEBE"
-                 TextAlignment="Center"
-                 Height="20.5"
-                 Width="250"
-                 HorizontalAlignment="Left"
-                 >
-            <Binding x:Name="binding" Mode="TwoWay" Path="currentCustomer.Name"/>
-        </TextBox>
+
+        <TextBox  Text="{Binding Path=currentCustomer.Name, Mode=TwoWay}"
+                  Grid.Column="1"
+                  Grid.Row="1"
+                  Style="{StaticResource textBoxStyle}"/>
+
         <TextBlock Text="PurchaseID"
                    Style="{StaticResource fontStyle }"
                    Grid.Column="0"
@@ -55,30 +52,119 @@
         <TextBox 
                  Text="{Binding Path=currentCustomer.PurchaseID, Mode=TwoWay}"
                  Grid.Column="1"
-                 Grid.Row="2"/>
-        <TextBox  Text="{Binding Path=currentCustomer.Name, Mode=TwoWay}"
-                  Grid.Column="1"
-                  Grid.Row="1"/>
-        <TextBox  Text="{Binding Path=currentCustomer.FullPrice, Mode=TwoWay}"
-                   Grid.Column="1"
-                  Grid.Row="3"/>
+                 Grid.Row="2"
+                 Style="{StaticResource textBoxStyle}"/>
+        <Button x:Name="bttnCustomerSaver"
+                Command="{Binding Path=addCustomerCommand}"
+                Content="Save Customer"
+                Grid.Column="1"
+                Grid.Row="3"
+               
+            
+            ></Button>
 
-        <TextBlock Text="Full Price"
+
+        <TextBlock Text="New Purchase"
                    Style="{StaticResource fontStyle }"
                    Grid.Column="0"
-                   Grid.Row="3"
-                   HorizontalAlignment="Right"/>
+                   Grid.Row="4"
+                   VerticalAlignment="Top"/>
+        <TextBlock/>
+        <TextBlock Text="Product ID"
+                   Style="{StaticResource fontStyle }"
+                   Grid.Column="0"
+                   Grid.Row="5"
+                   HorizontalAlignment="Right"
+                   />
+        <TextBlock/>
+        <TextBox Style="{StaticResource textBoxStyle}"
+                 HorizontalAlignment="Left" 
+                 Text="{Binding Path=currentPurchase.ProductID, Mode=TwoWay}"
+                 Grid.Column="1"
+                 Grid.Row="5"/>
+        <TextBlock Text="Customer ID"
+                   Style="{StaticResource fontStyle }"
+                   Grid.Column="0"
+                   Grid.Row="6"
+                   HorizontalAlignment="Right"
+                   />
+        <TextBox Style="{StaticResource textBoxStyle}"
+                 HorizontalAlignment="Left" 
+                 Text="{Binding Path=currentPurchase.CustomerID, Mode=TwoWay}"
+                 Grid.Column="1"
+                 Grid.Row="6"
+                 x:Name="CustID"/>
+        <TextBlock Text="Price"
+                   Style="{StaticResource fontStyle }"
+                   Grid.Column="0"
+                   Grid.Row="7"
+                   HorizontalAlignment="Right"
+                   />
+        <TextBox Style="{StaticResource textBoxStyle}"
+                 HorizontalAlignment="Left" 
+                 Text="{Binding Path=currentPurchase.Price, Mode=TwoWay}"
+                 Grid.Column="1"
+                 Grid.Row="7"/>
+        <TextBlock Text="Quantity"
+                   Style="{StaticResource fontStyle }"
+                   Grid.Column="0"
+                   Grid.Row="8"
+                   HorizontalAlignment="Right"
+                   />
+        <TextBox Style="{StaticResource textBoxStyle}"
+                 HorizontalAlignment="Left" 
+                 Text="{Binding Path=currentPurchase.Quantity, Mode=TwoWay}"
+                 Grid.Column="1"
+                 Grid.Row="8"/>
 
-        <TextBlock Grid.Row="4"
-                   Grid.ColumnSpan="2"
-                   Text="{Binding Path=infoMessage }"/>
-        <Button Command="{Binding Path=addCustomerCommand}" 
-                Height="20" 
-                Width="100" 
-                HorizontalAlignment="Right" 
-                Content="Customer"
+
+        <TextBlock Grid.Row="9"
+                  
+                   Text="Our Product:"
+                   Style="{StaticResource fontStyle}"/>
+
+        <DataGrid x:Name="dtGrd"
+                  AutoGenerateColumns="False"
+                  Grid.Row="9"
+                  Grid.Column="1" 
+                  Margin="5,8" 
+                  Padding="3"
+                  Foreground="#5DBEBE"
+                  Background="Transparent"
+                  
+                  ItemsSource="{Binding Path=Products, Mode=TwoWay}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" 
+                                    Width="auto"
+                                    Binding="{Binding Path=Name}"/>
+                <DataGridTextColumn Header="Manufacturer" 
+                                    Width="auto"
+                                    Binding="{Binding Path=Manufacturer}" />
+                <DataGridTextColumn Header="Quantity" 
+                                    Width="auto"
+                                    Binding="{Binding Path=Quantity}" />
+                <DataGridTextColumn Header="Price"
+                                    Width="auto"
+                                    Binding="{Binding Path=Price}"/>
+                <DataGridTextColumn Header="Width" 
+                                    Width="auto"
+                                    Binding="{Binding Path=Width}"/>
+                <DataGridTextColumn Header="Length" 
+                                    Width="auto"
+                                    Binding="{Binding Path=Length}" />
+                <DataGridTextColumn Header="Height" 
+                                    Width="auto"
+                                    Binding="{Binding Path=Height}" />
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="bttnSave"
+                Content="Save Purchases"
                 Grid.Column="1"
-                Grid.Row="5"
-                />
+                Grid.Row="10"
+              
+                Command="{Binding Path=addPurchaseCommand}"
+            
+            ></Button>
+      
     </Grid>
 </UserControl>
