--- a/View/StorageView.xaml
+++ b/View/StorageView.xaml
@@ -10,11 +10,17 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
+            
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+
         </Grid.RowDefinitions>
         <TextBlock Text="Storage"
                    Grid.Column="1"
@@ -52,7 +58,63 @@
                 <DataGridTextColumn Header="Height" 
                                     Width="auto"
                                     Binding="{Binding Path=Height}" />
-                </DataGrid.Columns>
+            </DataGrid.Columns>
         </DataGrid>
+        <TextBlock Text="Name"
+                   Grid.Column="0"
+                   Grid.Row="2"
+                   HorizontalAlignment="Right"
+                   Style="{StaticResource fontStyle}"/>
+        <TextBox Width="100" 
+                 HorizontalAlignment="Left" 
+                 Text="{Binding Path=currentProduct.Name, Mode=TwoWay}"
+                 Grid.Column="1"
+                 Grid.Row="2"
+                 Style="{StaticResource textBoxStyle}"/>
+        <TextBlock Text="Manufacturer"
+                   Grid.Column="0"
+                   Grid.Row="3"
+                   Style="{StaticResource fontStyle}"/>
+        <TextBox Width="100" 
+                 HorizontalAlignment="Left" 
+                 Text="{Binding Path=currentProduct.Manufacturer ,Mode=TwoWay}"
+                 Grid.Column="1"
+                 Grid.Row="3"
+                 Style="{StaticResource textBoxStyle}"/>
+        <TextBlock Text="Price"
+                   Grid.Column="0"
+                   Grid.Row="4"
+                   HorizontalAlignment="Right"
+                   Style="{StaticResource fontStyle}"/>
+        <TextBox Width="100" 
+                 HorizontalAlignment="Left" 
+                 Text="{Binding Path=currentProduct.Price, Mode=TwoWay}"
+                 Grid.Column="1"
+                 Grid.Row="4"
+                 Style="{StaticResource textBoxStyle}"/>
+        <TextBlock Text="Quantity"
+                   Grid.Column="0"
+                   Grid.Row="5"
+                   HorizontalAlignment="Right"
+                   Style="{StaticResource fontStyle}"/>
+        <TextBox Width="100" 
+                 HorizontalAlignment="Left" 
+                 Text="{Binding Path=currentProduct.Quantity, Mode=TwoWay}"
+                 Grid.Column="1"
+                 Grid.Row="5"
+                 Style="{StaticResource textBoxStyle}"/>
+        <Button Command="{Binding Path=addProductCommand}" 
+                Width="100" 
+                Content="Add Product"
+                Grid.Column="1"
+                Grid.Row="6"
+                HorizontalAlignment="Left"/>
+        
+        <Button Command="{Binding Path=editProductCommand}" 
+                Width="100"  
+                Content="Edit product"
+                Grid.Column="1"
+                Grid.Row="6"
+                HorizontalAlignment="Right"/>
     </Grid>
 </UserControl>
