--- a/Resources/DefaultStyle.xaml
+++ b/Resources/DefaultStyle.xaml
@@ -35,7 +35,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <ImageBrush x:Key="closeBttn_MouseOver" ImageSource="../Assets/close_MouseOver.png"/>
+    <ImageBrush x:Key="closeBttn_MouseOver" ImageSource="../Assets/close_MouseOver.png"/>
+
     <Style x:Key="closeBttn" TargetType="{x:Type Button}">
         <Setter Property="Template">
             <Setter.Value>
@@ -87,5 +88,26 @@
         <Setter Property="FontSize"
                 Value="20"/>
     </Style>
+    <Style x:Key="textBoxStyle" TargetType="{x:Type TextBox}">
+        <Setter Property="Foreground"
+                Value="#5DBEBE"/>
+        <Setter Property="BorderBrush"
+                Value="#5DBEBE"/>
+        <Setter Property="TextAlignment"
+                Value="Center"/>
+        <Setter Property="Height"
+                Value="30.5"/>
+        <Setter Property="Width"
+                Value="250"/>
+        <Setter Property="HorizontalAlignment"
+                Value="Left"/>
+        <Setter Property="Margin"
+                Value="10,0,0,0"/>
+        <Setter Property="FontSize"
+                Value="20"/>
+        <Setter Property="Background"
+                Value="Transparent"/>
+    </Style>
+   
 
 </ResourceDictionary>
